# agent-build-tool

./: .gitignore  README.md  pyproject.toml
abt/: __init__.py  cli.py  compiler.py  docs.py  runtime.py  scaffold.py  utils.py
examples/basic/agents/: support_agent.md
examples/basic/macros/: output_json.md
examples/basic/skills/refund_policy/: SKILL.md
tests/: test_compiler.py
